2003-06-20  Gre7g Luterman  <gre7g@wolfhome.com>

	* Fixed a bug in the LDAP code found by Chet McNeill.

2003-06-08  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (maketext): Now accepts an absolute pathname to a
	template file which short-circuits the searching process.

2003-06-08  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* FilterParser.py (_FilterFile.__init__): bounce,reject now can
	take an option, which is the path to a specific template.

2003-06-05  Cory Wright <cwright@standblue.net>

	* Util.py (maketext): Recognize TEMPLATE_DIR_MATCH_RECIPIENT.
	
	* Defaults.py (TEMPLATE_DIR_MATCH_RECIPIENT): New variable

2003-06-04  Tim Legant  <tim@catseye.net>

	* Util.py (make_msgid): Added ability for TMDAIDTAG environment
	variable to override the string "TMDA" in the tag portion of the
	generated Message-ID.

2003-05-25  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py (PENDING_DIR): New variable.

	* Pending.py (Queue.initQueue): Use Defaults.PENDING_DIR.
	(Message.__init__): Ditto.

2003-05-24  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py (CGI_VIRTUALUSER): New variable.

2003-05-24  Tim Legant  <tim@catseye.net>

	* MTA.py (MTA.getvdomainprepend): Removed function.
	(Qmail.getvdomainprepend): Moved function to Util.py.

	* Util.py (getvdomainprepend): New function, moved from MTA.py.
	(add_headers): New function.
	(purge_headers): New function.

	* AutoResponse.py (AutoResponse.create): Used add_headers in place
	of loop.  Added ability to purge headers (PURGED_HEADERS_SERVER).

	* Defaults.py (PURGED_HEADERS_CLIENT): Renamed from
	PURGED_HEADERS.
	(PURGED_HEADERS_SERVER, PURGED_HEADERS_DELIVERY): New variables.

	* Deliver.py (Deliver.deliver): Added ability to purge headers
	during delivery (PURGED_HEADERS_DELIVERY).

2003-05-22  Jason R. Mastaler  <jason@mastaler.com>

	* Version.py (ALL): Add CODENAME.

2003-04-29  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
